selectores de atributo: id y clases

--- a/clase03-selectores/index.html
+++ b/clase03-selectores/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
-      <h1>Selctores en HTML.</h1>
+      <h1 id="tittle">Selctores en HTML.</h1>
     </header>
-    <main>
+    <main class="contenido">
       <article>
         <h2>¿Que es la computacion Cuantica?</h2>
-        <p>
+        <p class="text">
           La computación cuántica es un tipo de paradigma computacional en donde
           los ordenadores utilizan los principios de la mecánica cuántica para
           procesar información a través de qubits, también escritos como cubits
@@ -22,7 +22,7 @@
           información. A diferencia del paradigma clásico que funciona con solo
           dos estados.
         </p>
-        <p>
+        <p class="text">
           El precio de un ordenador cuántico puede rondar los 15 millones de
           dólares. Este tipo de computación cuántica promete sobrepasar las
           limitaciones actuales del cálculo matemático y resolver problemas que
@@ -43,7 +43,7 @@
         </ul>
       </aside>
     </main>
-    <footer>
+    <footer class="pie_pagina">
       <p>JhonaDev. &copy; 2024.</p>
     </footer>
   </body>
