selectores de otros atributos

--- a/clase03-selectores/index.html
+++ b/clase03-selectores/index.html
@@ -9,7 +9,19 @@
   <body>
     <header>
       <h1 id="tittle">Selctores en HTML.</h1>
+      <p>Lista de enlaces.....</p>
+      <a href="https://www.youtube.com">Enlace a YouTube</a>
+      <a href="color-modo-randon">Color Randon</a>
+      <a href="#seccion-verde">Color Verde</a>
+      <a href="color-rojo">Color Rojo</a>
+      <p href="en-GB">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus sapiente
+        ipsa natus vel officia. Aperiam ipsum nobis iste nostrum voluptatibus
+        odio? Tempora ea numquam libero perferendis totam? Accusamus, porro
+        impedit.
+      </p>
     </header>
+
     <main class="contenido">
       <article>
         <h2>¿Que es la computacion Cuantica?</h2>
