selectores combinado: descendiente

--- a/clase04-selectores-agrupados/index.html
+++ b/clase04-selectores-agrupados/index.html
@@ -17,27 +17,30 @@
         Los selectores agrupados permiten seleccionar elementos que coincidan
         con varios criterios en una sola línea.
       </p>
-      <p class="text-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde possimus
-        veniam perspiciatis distinctio commodi doloribus accusamus error fuga
-        quae. Maiores recusandae quo, labore ad ut accusamus quos! Obcaecati,
-        assumenda animi!
-      </p>
+      <h2 class="tittle-2">Titulo Secundario</h2>
+      <div>
+        <p class="text-2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde possimus
+          veniam perspiciatis distinctio commodi doloribus accusamus error fuga
+          quae. Maiores recusandae quo, labore ad ut accusamus quos! Obcaecati,
+          assumenda animi!
+        </p>
 
-      <h2>Titulo Secundario</h2>
-      <p class="text-3">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, eaque
-        hic eum minus tenetur cupiditate a fuga necessitatibus maiores
-        voluptates ab repellat? Iste quae soluta similique tenetur saepe
-        dolorum. Doloremque.
-      </p>
+        <h2 class="tittle-2">Titulo Secundario</h2>
+        <p class="text-3">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum, eaque
+          hic eum minus tenetur cupiditate a fuga necessitatibus maiores
+          voluptates ab repellat? Iste quae soluta similique tenetur saepe
+          dolorum. Doloremque.
+        </p>
 
-      <p class="text-4">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
-        temporibus sed veritatis ducimus sequi magni corporis fugit quas
-        obcaecati rem ea facilis repudiandae hic, eaque nihil porro aperiam
-        earum autem!
-      </p>
+        <p class="text-4">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          temporibus sed veritatis ducimus sequi magni corporis fugit quas
+          obcaecati rem ea facilis repudiandae hic, eaque nihil porro aperiam
+          earum autem!
+        </p>
+      </div>
     </main>
 
     <footer>
