--- a/clase09-box-model/index.html
+++ b/clase09-box-model/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1 class="tittle">Box Model</h1>
     <div class="block">ELEMENTOS DE BLOQUE</div>
     <a href="#" class="inline">Elementos de linea</a>
   </body>
