--- a/clase09-box-model/index.html
+++ b/clase09-box-model/index.html
@@ -8,7 +8,32 @@
   </head>
   <body>
     <h1 class="tittle">Box Model</h1>
-    <div class="block">ELEMENTOS DE BLOQUE</div>
-    <a href="#" class="inline">Elementos de linea</a>
+    <div class="block">
+      ELEMENTOS DE BLOQUE Lorem ipsum dolor sit amet consectetur adipisicing
+      elit. Voluptate neque porro praesentium quae aut dolorem voluptatum
+      voluptatibus tenetur perferendis vero, sunt commodi animi quo facilis amet
+      laborum minus quasi temporibus.
+    </div>
+    <p class="text">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum excepturi
+      dolores explicabo ea id pariatur reprehenderit doloremque est ducimus, ab
+      voluptas eius veritatis! Laudantium repellat nobis amet. Voluptatibus,
+      magni harum.
+    </p>
+
+    <p class="text">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum excepturi
+      dolores explicabo ea id pariatur reprehenderit doloremque est ducimus, ab
+      voluptas eius veritatis! Laudantium repellat nobis amet. Voluptatibus,
+      magni harum.
+    </p>
+
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+      <li>Item 5</li>
+    </ul>
   </body>
 </html>
