--- a/clase09-box-model/index.html
+++ b/clase09-box-model/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1 class="tittle">Box Model</h1>
+    <a href="#" class="inline">ELemento de linea</a>
     <div class="block">
       ELEMENTOS DE BLOQUE Lorem ipsum dolor sit amet consectetur adipisicing
       elit. Voluptate neque porro praesentium quae aut dolorem voluptatum
@@ -28,12 +29,16 @@
       magni harum.
     </p>
 
-    <ul>
+    <ul class="list">
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
       <li>Item 4</li>
       <li>Item 5</li>
     </ul>
+
+    <div class="buttoms">
+      <button class="button">Soy un Buton.</button>
+    </div>
   </body>
 </html>
