ejercicio practico de margin y padding

--- a/clase11-margin-padding/index.html
+++ b/clase11-margin-padding/index.html
@@ -9,5 +9,9 @@
 <body>
     <p class="text01">Esto es un parrafo</p>
     <p class="text02">Esto es un parrafo</p>
+    <hr>
+    <div>
+        SOY UN DIV
+    </div>
 </body>
 </html>
